<resources>
    <string name="app_name">Sensory App</string>
    <string name="todo">TODO</string>
    <string name="my_wellness_data">My Wellness Data</string>
    <string name="gps_location">GPS Location:</string>
    <string name="sound_level">Sound Level:</string>
    <string name="devices_nearby">Devices Nearby:</string>
    <string name="motion_level">Motion Level:</string>
    <string name="historical_data">Historical Data</string>
    <string name="last_hour">Last Hour:</string>
    <string name="last_2_hours">Last 2 Hours:</string>
    <string name="last_3_hours">Last 3 Hours:</string>
    <string name="location_nrecommendation">Location\nRecommendation</string>
    <string name="decline">decline</string>
    <string name="accept">accept</string>
    <string name="learn_more">learn more</string>
    <string name="you_might_be_feeling">You might be feeling...</string>
    <string name="personal_data">Personal Data</string>
    <string name="settings">Settings</string>
    <string name="welcome">Hi, %1$s!\nHow are you feeling?</string>
    <string name="understimulated_preferences">Understimulated Preferences</string>
    <string name="overstimulated_preferences">Overstimulated Preferences</string>
    <string name="notifications">Notifications</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="device_count">Device Count</string>
    <string name="cafe">Cafe</string>
    <string name="restaurant">Restaurant</string>
    <string name="library">Library</string>
    <string name="park">Park</string>
    <string name="bowling">Bowling</string>
    <string name="gym">Gym</string>
    <string name="overstimulated">Overstimulated</string>
    <string name="understimulated">Understimulated</string>
    <string name="good">Good</string>
</resources>