<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">
    <CheckBox
        android:id="@+id/bowlingOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bowling" />

    <CheckBox
        android:id="@+id/restaurantOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restaurant" />

    <CheckBox
        android:id="@+id/gymOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gym" />

    <CheckBox
        android:id="@+id/parkOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/park" />

</LinearLayout>
