<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            style="@style/appBar"
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back"/>

    </com.google.android.material.appbar.AppBarLayout>
    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="32dp"
        app:flexDirection="column"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:justifyContent="space_between">
        <TextView
            style="@style/heading1"
            android:id="@+id/settingsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings" />
        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flexDirection="column"
            app:justifyContent="space_around">
            <com.google.android.flexbox.FlexboxLayout
                style="@style/orangeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:flexDirection="row"
                app:justifyContent="space_between">
                <TextView
                    style="@style/subtitle1"
                    android:id="@+id/welcomeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome" />
                <Button
                    style="@style/editButton"
                    android:id="@+id/editNameButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_edit"/>
            </com.google.android.flexbox.FlexboxLayout>
            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:flexDirection="row"
                app:justifyContent="space_around">
                <RadioGroup
                    android:checkedButton="@+id/moodRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatRadioButton
                        app:buttonTint="@color/red"
                        android:id="@+id/verySadRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/radio_btn_very_sad_selector"/>
                    <RadioButton
                        app:buttonTint="@color/orange"
                        android:id="@+id/sadRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/radio_btn_sad_selector"/>
                    <RadioButton
                        app:buttonTint="@color/yellow"
                        android:id="@+id/neutralRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/radio_btn_neutral_selector"/>
                    <RadioButton
                        app:buttonTint="@color/lime_green"
                        android:id="@+id/happyRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/radio_btn_happy_selector"/>
                    <RadioButton
                        app:buttonTint="@color/green"
                        android:id="@+id/veryHappyRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/radio_btn_very_happy_selector"/>
                </RadioGroup>
            </com.google.android.flexbox.FlexboxLayout>
        </com.google.android.flexbox.FlexboxLayout>
        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flexDirection="column"
            app:justifyContent="space_around">
            <com.google.android.flexbox.FlexboxLayout
                style="@style/orangeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:flexDirection="row"
                app:justifyContent="space_between">
                <TextView
                    style="@style/subtitle1"
                    android:id="@+id/understimText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/understimulated_preferences" />
                <Button
                    style="@style/editButton"
                    android:id="@+id/editUnderstimPreferences"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_edit"/>
            </com.google.android.flexbox.FlexboxLayout>
            <TextView
                style="@style/body1"
                android:id="@+id/understimPreferences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.flexbox.FlexboxLayout>
        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flexDirection="column"
            app:justifyContent="space_around">
            <com.google.android.flexbox.FlexboxLayout
                style="@style/orangeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:flexDirection="row"
                app:justifyContent="space_between">
                <TextView
                    style="@style/subtitle1"
                    android:id="@+id/overstimText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/overstimulated_preferences" />
                <Button
                    style="@style/editButton"
                    android:id="@+id/editOverstimPreferences"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_edit"/>
            </com.google.android.flexbox.FlexboxLayout>
            <TextView
                style="@style/body1"
                android:id="@+id/overstimPreferences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.flexbox.FlexboxLayout>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerThickness="2dp"/>
        <TextView
            style="@style/heading1"
            android:id="@+id/notificationsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notifications" />
        <com.google.android.flexbox.FlexboxLayout
                style="@style/lightGrayLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:flexDirection="row"
                app:justifyContent="space_between">
                <TextView
                    style="@style/subtitle1"
                    android:id="@+id/soundLevelText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sound_level" />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/minSoundTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/min">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/minSoundEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/maxSoundTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/max">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/maxSoundEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.flexbox.FlexboxLayout>
    </com.google.android.flexbox.FlexboxLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>